--- a/templates/login.html
+++ b/templates/login.html
@@ -2,8 +2,8 @@
     <h2>Login</h2>
     <label for="email">Email:</label>
     <input type="email" id="email" name="email" required><br><br>
-    <label for="name">Name:</label>
-    <input type="text" id="name" name="name" required><br><br>
+    <label for="password">Password:</label>
+    <input type="password" id="password" name="password" required><br><br>
     <button type="submit">Login</button>
     {% if error %}
         <p style="color:red;">{{ error }}</p>
