--- a/templates/register.html
+++ b/templates/register.html
@@ -7,27 +7,36 @@
     <h1>Customer Registration</h1>
     <form method="POST">
         <label>Name:</label><br>
-        <input type="text" name="name" required><br><br>
+        <input type="text" name="name" required value="{{ request.form.name if error else '' }}"><br><br>
+
+        <label>Password:</label><br>
+        <input type="password" name="password" required><br><br>
+
+        <label>Confirm Password:</label><br>
+        <input type="password" name="confirm_password" required><br><br>
 
         <label>Email:</label><br>
-        <input type="email" name="email" required><br><br>
+        <input type="email" name="email" required value="{{ request.form.email if error else '' }}"><br><br>
 
         <label>Item Name:</label><br>
-        <input type="text" name="item_name" required><br><br>
+        <input type="text" name="item_name" required value="{{ request.form.item_name if error else '' }}"><br><br>
 
         <label>Total Price:</label><br>
-        <input type="number" step="0.01" name="total_price" required><br><br>
+        <input type="number" step="0.01" name="total_price" required value="{{ request.form.total_price if error else '' }}"><br><br>
 
         <label>Address Line:</label><br>
-        <input type="text" name="address_line" required><br><br>
+        <input type="text" name="address_line" required value="{{ request.form.address_line if error else '' }}"><br><br>
 
         <label>City:</label><br>
-        <input type="text" name="city" required><br><br>
+        <input type="text" name="city" required value="{{ request.form.city if error else '' }}"><br><br>
 
         <label>Country:</label><br>
-        <input type="text" name="country" required><br><br>
+        <input type="text" name="country" required value="{{ request.form.country if error else '' }}"><br><br>
 
         <input type="submit" value="Register">
     </form>
+    {% if error %}
+        <p style="color:red;">{{ error }}</p>
+    {% endif %}
 </body>
 </html>
