--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,5 +1,16 @@
-<h2>Welcome, {{ user_name }}!</h2>
-<p>You have successfully logged in.</p>
-<form action="/users">
-    <button type="submit">Show All Users</button>
-</form> 
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Welcome</title>
+    <link rel="stylesheet" href="/static/style.css">
+</head>
+<body>
+    <div class="center-card">
+        <h2>Welcome, {{ user_name }}!</h2>
+        <p>You have successfully logged in.</p>
+        <form action="/users">
+            <button class="main-btn" type="submit">Show All Users</button>
+        </form>
+    </div>
+</body>
+</html> 
