Fixed Users UI issues

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div class="center-card">
-        <h1>Welcome to the Customer App</h1>
+        <h1>Welcome to the Users DB</h1>
         <form action="/register" method="get" style="display:inline;">
             <button class="main-btn" type="submit">Register</button>
         </form>
